<resources>
    <string name="app_name">HeimdallCrimeWatch</string>

    <string-array name="crimesTypes">
        <item>all-crime</item>
        <item>anti-social-behaviour</item>
        <item>bicycle-theft</item>
        <item>burglary</item>
        <item>criminal-damage-arson</item>
        <item>drugs</item>
        <item>other-theft</item>
        <item>possession-of-weapons</item>
        <item>public-order</item>
        <item>robbery</item>
        <item>shoplifting</item>
        <item>theft-from-the-person</item>
        <item>vehicle-crime</item>
        <item>violent-crime</item>
        <item>other-crime</item>
    </string-array>

    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="heimdall_ncrime_watch">HEIMDALL \n CRIME WATCH</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enter_postcode">Enter Postcode ▼</string>
    <string name="enter_postcode_edittext">Enter Postcode</string>
    <string name="submit">Submit</string>
    <string name="saved_locations">Saved Locations ★</string>
    <string name="crime_details">Crime Details</string>
    <string name="crime">Crime</string>
    <string name="outcome">Outcome</string>
    <string name="location">Location</string>
    <string name="category">Category:</string>
    <string name="outcome_sign">Outcome:</string>
    <string name="lat">Lat:</string>
    <string name="back">Back</string>
    <string name="saved_locations_title">Saved Locations</string>
    <string name="delete_all">Delete All</string>
    <string name="name_your_location_and_filter">Name your location and filter :</string>
    <string name="crime_image">Crime Image</string>
    <string name="list">LIST</string>
    <string name="map">MAP</string>
    <string name="show_filters">Show Filters ▼</string>
    <string name="submit_filter">Submit Filter</string>
    <string name="crime_in_this_area">Crime in this area:</string>
</resources>
